--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: gnome
 Priority: optional
 Maintainer: Kentaro Hayashi <hayashi@clear-code.com>
 Build-Depends:
- debhelper (>= 9.20160403),
+ debhelper (>= 11),
  libglib2.0-dev,
  libgtk2.0-dev,
  libnotify-dev,
