--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,8 @@ Build-Depends:
  libssl-dev
 Standards-Version: 4.1.3
 Homepage: https://mattn.github.io/growl-for-linux/
+Vcs-Git: https://salsa.debian.org/growl-for-linux.git
+Vcs-Browser: https://salsa.debian.org/growl-for-linux/
 
 Package: growl-for-linux
 Architecture: any
